metabase/02-mb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    run: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
      run: metabase
  template:
    metadata:
      labels:
        app: metabase
        run: metabase
    spec:
      nodeSelector:
        'beta.kubernetes.io/os': linux
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ancillary-services
      containers:
        - name: metabase-staging
          image: metabase/metabase:latest
          ports:
            - containerPort: 3000
      volumes:
        - name: metabase-secret
          secret:
            secretName: metabase-secret
