metabase/03-mb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mb-sitio
  labels:
    run: mb-sitio
spec:
  ports:
    - port: 80
      name: mb-sitio
  selector:
    run: mb-sitio
