metabase/04-mb-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  type: ClusterIP
  ports:
  - name: http-web
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: metabase-staging

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-metabase
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: coria-santiago-caso-3.my.kube.um.edu.ar
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: metabase-service
                port:
                  number: 80
