metabase/04-mb-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: '/'
spec:
  ingressClassName: nginx
  rules:
    - host: coria-santiago-caso-3.my.kube.um.edu.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase-service
                port:
                  number: 3000
